--- a/index.html
+++ b/index.html
@@ -31,22 +31,20 @@ h3 {
 </head>    
 <body>
     <div id="content">
-        <h1>Sarah Gothard</h1>
-        <h2>Freshman in Greenville, South Carolina</h2>
+        <h1>Kita Thompson</h1>
+        <h2>Sophomore in Greenville, South Carolina</h2>
         
-         <p>I am a freshman at Bob Jones University studying computer science with a minor in 
-            mathematics. I work for the Computer Science department as a lab monitor.</p>
+         <p>I am a sophomore at L'Manburg University studying English.
+             I work for the Theater department as a stage hand.</p>
          <p>
-            I attend Cornerstone Baptist Church in Greer SC. I have a mobile-friendly 
-            sheet music <a href="https://mobilehymns.org/">website</a> and post weekly service
-            schedules for several churches.
+            I attend Church of Crow Father in the Anarctic Empire. The Crow Father is my dadza and the Blood God is my patron. 
          </p> 
          <p>
-            I enjoy listening to podcasts and having deep conversations.
+            I enjoy writing and watching Twitch.
          </p>
         <h3>EDUCATION</h3>
-        Computer Science<br />
-        Bob Jones University
+        English<br />
+        L'Manburg University
     </div>
            
 </body>
