--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
 <style>
 body {
-    background: lightgreen;
+    background: darkgreen;
     font-family: Verdana;
 }  
 #content {
-    background: lightyellow;
+    background: darkred;
     min-width: 200px;
     max-width: 500px;
     padding: 50px;
