--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ body {
     font-family: Verdana;
 }  
 #content {
-    background: darkred;
+    background: gold;
     min-width: 200px;
     max-width: 500px;
     padding: 50px;
