--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ h3 {
 <body>
     <div id="content">
         <h1>Kita Thompson</h1>
-        <h2>Sophomore in Greenville, South Carolina</h2>
+        <h2>Sophomore in Anarctic Empire, South Pole</h2>
         
          <p>I am a sophomore at L'Manburg University studying English.
              I work for the Theater department as a stage hand.</p>
