--- a/index.html
+++ b/index.html
@@ -1,51 +1,72 @@
-
+<!DOCTYPE html>
 <html>
+
 <head>
-<style>
-body {
-    background: darkgreen;
-    font-family: Verdana;
-}  
-#content {
-    background: gold;
-    min-width: 200px;
-    max-width: 500px;
-    padding: 50px;
-    margin: auto;
-    margin-top: -50px;
-    line-height: 150%;
-}
-h1 {
-    letter-spacing: 2px;
-    font-size: 16px;
-    text-align: center;
-}
-h2 {
-    font-size: 14px;
-    text-align: center;
-}
-h3 {
-    font-size: 12px;
-}
-</style>
-</head>    
-<body>
-    <div id="content">
-        <h1>Kita Thompson</h1>
-        <h2>Sophomore in Anarctic Empire, South Pole</h2>
-        
-         <p>I am a sophomore at L'Manburg University studying English.
-             I work for the Theater department as a stage hand.</p>
-         <p>
-            I attend Church of Crow Father in the Anarctic Empire. The Crow Father is my dadza and the Blood God is my patron. 
-         </p> 
-         <p>
-            I enjoy writing and watching Twitch.
-         </p>
-        <h3>EDUCATION</h3>
-        English<br />
-        L'Manburg University
-    </div>
-           
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>Home - Antarctic Empire</title>
+    <meta name="description" content="if you don't know what the Antarctic Empire is, it's fine, it's a niche thing. this is for fun for an assignment">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin:700">
+    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
+</head>
+
+<body id="page-top">
+    <nav class="navbar navbar-light navbar-expand-md navbar navbar-expand-lg fixed-top" id="mainNav">
+        <div class="container"><a class="navbar-brand js-scroll-trigger" href="#">Antarctic Empire</a><button data-toggle="collapse" class="navbar-toggler navbar-toggler-right" data-target="#navbarResponsive" type="button" aria-controls="navbarResponsive" aria-expanded="false"
+                aria-label="Toggle navigation" value="Menu"><i class="fa fa-bars"></i></button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="nav navbar-nav ml-auto">
+                    <li class="nav-item nav-link js-scroll-trigger"><a class="nav-link active js-scroll-trigger" href="#about">About</a></li>
+                    <li class="nav-item nav-link js-scroll-trigger"><a class="nav-link js-scroll-trigger" href="#download">download</a></li>
+                    <li class="nav-item nav-link js-scroll-trigger"><a class="nav-link js-scroll-trigger" href="#contact">contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <header class="masthead" style="background-image:url('assets/img/intro-bg.jpg');">
+        <div class="intro-body" style="background: url(&quot;assets/img/AE_Flag-0-0.webp&quot;) center / auto;">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 mx-auto" style="height: 205px;text-align: center;">
+                        <h1 class="brand-heading" style="text-shadow: 6px 6px 5px rgb(0,0,0);">Kita tomson</h1>
+                        <p class="intro-text" style="text-shadow: 1px 0px 3px rgb(255,255,255);filter: grayscale(0%) sepia(0%);margin: -11px;color: rgb(0,0,0);">Sophomore, English BA, University of the Antarctic Empire</p><a class="btn btn-link btn-circle" role="button" href="#about"><i class="fa fa-angle-double-down animated"></i></a></div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <section id="about" class="content-section text-center">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 mx-auto">
+                    <h2>World Domination, one day at a time</h2>
+                    <p>I am a Sophomore at University of Antarctic Empire in South Pole, Earth. I work in the Theater Department as a stage hand.</p>
+                    <p>There is an on-campus church called Crow Father Chapel. Crow Father is my dadza and the Blood God is my main Professor.&nbsp;</p>
+                    <p>Some of my favorite pastimes are crossbow and trident training, elytra races, and building snow golems.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="download" class="download-section content-section text-center" style="background-image:url('assets/img/downloads-bg.jpg');">
+        <div class="container">
+            <div class="col-lg-8 mx-auto">
+                <h1>join the empire!</h1>
+                <p>You can find us at the bottom of the planet. Just go south. <br>The day will come when you won't need to search for the Empire because we will conquer the world.</p>
+            </div>
+        </div>
+    </section>
+    <section id="contact" class="content-section text-center"></section>
+    <div class="map-clean"></div>
+    <footer>
+        <div class="container text-center">
+            <p>Copyright ©&nbsp;Antarctic Empire 2022</p>
+        </div>
+    </footer>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+    <script src="assets/js/grayscale.js"></script>
 </body>
+
 </html>
